Adding logs route

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="js/app.js"></script>
         <script src="js/controllers/homeCtrl.js"></script>
         <script src="js/controllers/credentialsCtrl.js"></script>
+        <script src="js/controllers/logsCtrl.js"></script>
         <script src="js/routes.js"></script>
         <div ui-view></div>
     </body>
