--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <body ng-app="app">
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script src="node_modules/lovefield/dist/lovefield.min.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/config.js"></script>
+        <script src="js/services/dbService.js"></script>
         <script src="js/controllers/homeCtrl.js"></script>
         <script src="js/controllers/credentialsCtrl.js"></script>
         <script src="js/controllers/logsCtrl.js"></script>
