--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="js/app.js"></script>
         <script src="js/config.js"></script>
         <script src="js/services/dbService.js"></script>
+        <script src="js/services/userService.js"></script>
         <script src="js/controllers/homeCtrl.js"></script>
         <script src="js/controllers/credentialsCtrl.js"></script>
         <script src="js/controllers/logsCtrl.js"></script>
