--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <script src="js/app.js"></script>
         <script src="js/config.js"></script>
         <script src="js/services/dbService.js"></script>
+        <script src="js/services/crudService.js"></script>
         <script src="js/services/userService.js"></script>
+        <script src="js/services/testService.js"></script>
+        <script src="js/services/appCtrl.js"></script>
         <script src="js/controllers/homeCtrl.js"></script>
         <script src="js/controllers/credentialsCtrl.js"></script>
         <script src="js/controllers/logsCtrl.js"></script>
