--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script src="js/services/crudService.js"></script>
         <script src="js/services/userService.js"></script>
         <script src="js/services/testService.js"></script>
-        <script src="js/services/appCtrl.js"></script>
+        <script src="js/controllers/appCtrl.js"></script>
         <script src="js/controllers/homeCtrl.js"></script>
         <script src="js/controllers/credentialsCtrl.js"></script>
         <script src="js/controllers/logsCtrl.js"></script>
