--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
-    <body ng-app="app">
+    <body ng-app="app" ng-controller="appCtrl">
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="node_modules/lovefield/dist/lovefield.min.js"></script>
