--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
         <script src="js/services/crudService.js"></script>
         <script src="js/services/userService.js"></script>
         <script src="js/services/testService.js"></script>
+        <script src="js/services/questionService.js"></script>
+        <script src="js/services/answerService.js"></script>
         <script src="js/controllers/appCtrl.js"></script>
         <script src="js/controllers/homeCtrl.js"></script>
         <script src="js/controllers/credentialsCtrl.js"></script>
         <script src="js/controllers/logsCtrl.js"></script>
+        <script src="js/controllers/testCtrl.js"></script>
         <script src="js/routes.js"></script>
         <div ui-view></div>
     </body>
