--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body ng-app="app" ng-controller="appCtrl">
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-        <script src="node_modules/lovefield/dist/lovefield.min.js"></script>
+        <script src="node_modules/lovefield/dist/lovefield.js"></script>
         <script src="js/app.js"></script>
         <script src="js/config.js"></script>
         <script src="js/services/dbService.js"></script>
@@ -27,6 +27,7 @@
         <script src="js/controllers/credentialsCtrl.js"></script>
         <script src="js/controllers/logsCtrl.js"></script>
         <script src="js/controllers/testCtrl.js"></script>
+        <script src="js/controllers/testCompletedCtrl.js"></script>
         <script src="js/routes.js"></script>
         <div ui-view></div>
     </body>
