New questions and adding security service

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="node_modules/lovefield/dist/lovefield.js"></script>
         <script src="js/app.js"></script>
         <script src="js/config.js"></script>
+        <script src="js/services/securityService.js"></script>
         <script src="js/services/dbService.js"></script>
         <script src="js/services/crudService.js"></script>
         <script src="js/services/userService.js"></script>
