--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="node_modules/lovefield/dist/lovefield.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/directives/progressBar.js"></script>
         <script src="js/config.js"></script>
         <script src="js/services/securityService.js"></script>
         <script src="js/services/dbService.js"></script>
