--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="node_modules/lovefield/dist/lovefield.js"></script>
+        <script src="js/util.js"></script>
         <script src="js/app.js"></script>
         <script src="js/directives/progressBar.js"></script>
         <script src="js/config.js"></script>
@@ -29,6 +30,7 @@
         <script src="js/services/questionService.js"></script>
         <script src="js/services/answerService.js"></script>
         <script src="js/controllers/appCtrl.js"></script>
+        <script src="js/controllers/testDetailsCtrl.js"></script>
         <script src="js/controllers/homeCtrl.js"></script>
         <script src="js/controllers/credentialsCtrl.js"></script>
         <script src="js/controllers/logsCtrl.js"></script>
