--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="css/stylesheet.css">
         <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css" media="screen">
+        <link rel="stylesheet" href="node_modules/sweetalert/dist/sweetalert.css">
     </head>
     <body ng-app="app" ng-controller="appCtrl">
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="node_modules/angular-sweetalert/SweetAlert.min.js"></script>
         <script src="node_modules/lovefield/dist/lovefield.js"></script>
         <script src="js/util.js"></script>
         <script src="js/app.js"></script>
