--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="node_modules/angular/angular.min.js"></script>
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script src="node_modules/angular-google-chart/ng-google-chart.min.js"></script>
         <script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
         <script src="node_modules/angular-sweetalert/SweetAlert.min.js"></script>
         <script src="node_modules/lovefield/dist/lovefield.js"></script>
