--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
         <script src="node_modules/angular-sweetalert/SweetAlert.min.js"></script>
         <script src="node_modules/lovefield/dist/lovefield.js"></script>
-        <script src="js/util.js"></script>
         <script src="js/app.js"></script>
         <script src="js/directives/progressBar.js"></script>
         <script src="js/config.js"></script>
+        <script src="js/services/utilService.js"></script>
         <script src="js/services/securityService.js"></script>
         <script src="js/services/dbService.js"></script>
         <script src="js/services/crudService.js"></script>
