--- a/index.html
+++ b/index.html
@@ -4,43 +4,51 @@
 
 <!doctype html>
 <html>
-    <head>
-        <title>Quiz</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="stylesheet" href="css/stylesheet.css">
-        <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css" media="screen">
-        <link rel="stylesheet" href="node_modules/sweetalert/dist/sweetalert.css">
-    </head>
-    <body ng-app="app" ng-controller="appCtrl">
-        <script src="node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="node_modules/angular/angular.min.js"></script>
-        <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-        <script src="node_modules/angular-google-chart/ng-google-chart.min.js"></script>
-        <script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
-        <script src="node_modules/angular-sweetalert/SweetAlert.min.js"></script>
-        <script src="node_modules/lovefield/dist/lovefield.js"></script>
-        <script src="js/app.js"></script>
-        <script src="js/directives/progressBar.js"></script>
-        <script src="js/config.js"></script>
-        <script src="js/services/utilService.js"></script>
-        <script src="js/services/securityService.js"></script>
-        <script src="js/services/dbService.js"></script>
-        <script src="js/services/crudService.js"></script>
-        <script src="js/services/userService.js"></script>
-        <script src="js/services/testService.js"></script>
-        <script src="js/services/questionService.js"></script>
-        <script src="js/services/answerService.js"></script>
-        <script src="js/controllers/appCtrl.js"></script>
-        <script src="js/controllers/testDetailsCtrl.js"></script>
-        <script src="js/controllers/homeCtrl.js"></script>
-        <script src="js/controllers/credentialsCtrl.js"></script>
-        <script src="js/controllers/logsCtrl.js"></script>
-        <script src="js/controllers/testCtrl.js"></script>
-        <script src="js/controllers/testCompletedCtrl.js"></script>
-        <script src="js/routes.js"></script>
-        <div ui-view class="container"></div>
-    </body>
+
+<head>
+    <title>Quiz</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css" media="screen">
+    <!-- build:css -->
+    <link rel="stylesheet" href="node_modules/sweetalert/dist/sweetalert.css">
+    <!-- endbuild -->
+</head>
+
+<body ng-app="app" ng-controller="appCtrl">
+    <!-- build:js -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/angular/angular.min.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="node_modules/angular-google-chart/ng-google-chart.min.js"></script>
+    <script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="node_modules/lovefield/dist/lovefield.js"></script>
+    <!-- endbuild -->
+    <!-- build:sweetalert -->
+    <script src="node_modules/angular-sweetalert/SweetAlert.min.js"></script>
+    <!-- endbuild -->
+    <script src="js/app.js"></script>
+    <script src="js/directives/progressBar.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/services/utilService.js"></script>
+    <script src="js/services/securityService.js"></script>
+    <script src="js/services/dbService.js"></script>
+    <script src="js/services/crudService.js"></script>
+    <script src="js/services/userService.js"></script>
+    <script src="js/services/testService.js"></script>
+    <script src="js/services/questionService.js"></script>
+    <script src="js/services/answerService.js"></script>
+    <script src="js/controllers/appCtrl.js"></script>
+    <script src="js/controllers/testDetailsCtrl.js"></script>
+    <script src="js/controllers/homeCtrl.js"></script>
+    <script src="js/controllers/credentialsCtrl.js"></script>
+    <script src="js/controllers/logsCtrl.js"></script>
+    <script src="js/controllers/testCtrl.js"></script>
+    <script src="js/controllers/testCompletedCtrl.js"></script>
+    <script src="js/routes.js"></script>
+    <div ui-view class="container"></div>
+</body>
 </hmtl>
