--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" media="screen">
     <!-- build:css -->
     <link rel="stylesheet" href="node_modules/sweetalert/dist/sweetalert.css">
     <!-- endbuild -->
